refactor: apply Builder Pattern to Appointment entity construction